--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ cache:
     - vendor
     - $HOME/.composer/cache
 
+before_install:
+  - php /home/travis/.phpenv/versions/5.6/bin/composer.phar self-update
 # install dependencies
 install:
   - travis_retry composer self-update
