--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ env: TEST_ENVIRONMENT=travis
 sudo: false
 
 before_install:
-  - php /home/travis/.phpenv/versions/5.6/bin/composer.phar self-update
-  - php /home/travis/.phpenv/versions/5.5/bin/composer.phar self-update
-  - php /home/travis/.phpenv/versions/5.6/bin/composer.phar self-update
+  - php /home/travis/.phpenv/versions/5.6/bin/composer self-update
+  - php /home/travis/.phpenv/versions/5.5/bin/composer self-update
+  - php /home/travis/.phpenv/versions/5.6/bin/composer self-update
 # cache vendor dirs
 cache:
   directories:
