--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "authors": [
         {
             "name": "Satit Seethaphon",
-            "email": "dixonsatit@gmail.com"
+            "email": "dixonsatit@gmail.com",
+            "homepage": "http://www.dimpled.me"
         }
     ],
     "require": {
@@ -20,12 +21,22 @@
         "trntv/probe": "@dev",
         "bower-asset/flot": "~0.8"
     },
+    "require-dev": {
+        "yiisoft/yii2-codeception": "~2.0",
+        "codeception/specify": "*",
+        "codeception/verify": "*",
+        "codeception/aspect-mock": "*"
+    },
     "autoload": {
         "psr-4": {
             "dimple\\administrator\\": ""
         }
     },
     "extra": {
-        "bootstrap": "dimple\\administrator\\Bootstrap"
+        "bootstrap": "dimple\\administrator\\Bootstrap",
+        "asset-installer-paths": {
+            "npm-asset-library": "vendor/npm",
+            "bower-asset-library": "vendor/bower"
+        }
     }
 }
