--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
     "require": {
         "yiisoft/yii2": "*",
         "yiisoft/yii2-authclient": "~2.0.0",
-        "kartik-v/yii2-widget-growl": "*",
         "yzalis/ua-parser": "0.2.0.*@dev",
         "kartik-v/yii2-widget-growl": "*",
         "bower-asset/remarkable-bootstrap-notify":"*",
         "trntv/probe": "@dev",
-        "bower-asset/flot": "~0.8"
+        "bower-asset/flot": "~0.8",
+        "yiisoft/yii2-jui": "~2.0.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "~2.0",
